unpackaged/main/default/objects/Opportunity/fields/ProjectCount__c.field-meta.xml
<CustomField>
    <fullName>ProjectCount__c</fullName>
    <description>Created by Rollup Helper</description>
    <label>ProjectCount</label>
    <precision>2</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>