unpackaged/main/default/objects/Opportunity/fields/Quarterly_Support_Total__c.field-meta.xml
<CustomField>
    <fullName>Quarterly_Support_Total__c</fullName>
    <formula>0.00</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Quarterly Support Total</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>