unpackaged/main/default/objects/Opportunity/fields/Quota_Points_1__c.field-meta.xml
<CustomField>
    <fullName>Quota_Points_1__c</fullName>
    <formula>IF(ISPICKVAL( Sale_Type__c, "Cash"), Cash_Quota_Points__c , 
  IF (ISPICKVAL( Sale_Type__c, "AnyWare"),  AnyWare_Quota_Point__c ,
 AnyWare_Net_CPE_Funding_Amount__c ))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Quota Points</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>