unpackaged/main/default/objects/Opportunity/fields/Quotation_Number__c.field-meta.xml
<CustomField>
    <fullName>Quotation_Number__c</fullName>
    <displayFormat>Q-{0}</displayFormat>
    <label>Quotation Number</label>
    <type>AutoNumber</type>
</CustomField>