unpackaged/main/default/objects/Opportunity/fields/RB_Cat_5__c.field-meta.xml
<CustomField>
    <fullName>RB_Cat_5__c</fullName>
    <defaultValue>false</defaultValue>
    <label>RB Cat-5</label>
    <type>Checkbox</type>
</CustomField>