unpackaged/main/default/objects/Opportunity/fields/RB_SFDC__c.field-meta.xml
<CustomField>
    <fullName>RB_SFDC__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Billed</label>
    <type>Checkbox</type>
</CustomField>