unpackaged/main/default/objects/Opportunity/fields/Recast_Adjustment__c.field-meta.xml
<CustomField>
    <fullName>Recast_Adjustment__c</fullName>
    <label>Recast Adjustment</label>
    <precision>14</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>