unpackaged/main/default/objects/Opportunity/fields/Recurring_Billing_Active__c.field-meta.xml
<CustomField>
    <fullName>Recurring_Billing_Active__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Recurring Billing Is Inactive</label>
    <type>Checkbox</type>
</CustomField>