unpackaged/main/default/objects/Opportunity/fields/Recurring_Billing_Funded_Total__c.field-meta.xml
<CustomField>
    <fullName>Recurring_Billing_Funded_Total__c</fullName>
    <label>Recurring Billing Funded Total</label>
    <precision>14</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>