unpackaged/main/default/objects/Opportunity/fields/Recurring_Billing_Line_Items_Count__c.field-meta.xml
<CustomField>
    <fullName>Recurring_Billing_Line_Items_Count__c</fullName>
    <label>Recurring Billing Line Items Count</label>
    <precision>12</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>