unpackaged/main/default/objects/Opportunity/fields/Recurring_Billing_Lines_Total_Rollup__c.field-meta.xml
<CustomField>
    <fullName>Recurring_Billing_Lines_Total_Rollup__c</fullName>
    <label>Recurring Billing Lines Total Rollup</label>
    <precision>14</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>