unpackaged/main/default/objects/Opportunity/fields/Remaining_Term__c.field-meta.xml
<CustomField>
    <fullName>Remaining_Term__c</fullName>
    <formula>((CloseDate + ( Numeric_Term__c * 30.416))- TODAY()) / 30.416</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Remaining Term</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>