unpackaged/main/default/objects/Opportunity/fields/RFP_Due_Date__c.field-meta.xml
<CustomField>
    <fullName>RFP_Due_Date__c</fullName>
    <label>RFP Due Date</label>
    <type>DateTime</type>
</CustomField>