unpackaged/main/default/objects/Opportunity/fields/Sale_Type__c.field-meta.xml
<CustomField>
    <fullName>Sale_Type__c</fullName>
    <label>Sale Type</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>AnyWare</fullName>
            </value>
            <value>
                <fullName>AnyWare Support Only</fullName>
            </value>
            <value>
                <fullName>AnyWare Access Circuit Conversion</fullName>
            </value>
            <value>
                <fullName>AnyWare CC Migration</fullName>
            </value>
            <value>
                <fullName>Cash</fullName>
            </value>
            <value>
                <fullName>TSP</fullName>
            </value>
            <value>
                <fullName>Recast</fullName>
            </value>
            <value>
                <fullName>GSA</fullName>
            </value>
            <value>
                <fullName>Break-Fix Case</fullName>
            </value>
            <value>
                <fullName>Non-Sale</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>