unpackaged/main/default/objects/Opportunity/fields/Sales_Order_Count__c.field-meta.xml
<CustomField>
    <fullName>Sales_Order_Count__c</fullName>
    <label>Sales Order Count</label>
    <precision>8</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>