unpackaged/main/default/objects/Opportunity/fields/Scope_of_Work_Timeline__c.field-meta.xml
<CustomField>
    <fullName>Scope_of_Work_Timeline__c</fullName>
    <label>Sales Scope of Work Timeline</label>
    <length>64</length>
    <type>Text</type>
</CustomField>