unpackaged/main/default/objects/Opportunity/fields/Section_5320e_IP_Telephone__c.field-meta.xml
<CustomField>
    <fullName>Section_5320e_IP_Telephone__c</fullName>
    <defaultValue>true</defaultValue>
    <label>Section: 5320e IP Telephone</label>
    <type>Checkbox</type>
</CustomField>