unpackaged/main/default/objects/Opportunity/fields/Section_5360_IP_Telephone__c.field-meta.xml
<CustomField>
    <fullName>Section_5360_IP_Telephone__c</fullName>
    <defaultValue>true</defaultValue>
    <label>Section: 5360 IP Telephone</label>
    <type>Checkbox</type>
</CustomField>