unpackaged/main/default/objects/Opportunity/fields/Section_6920_IP_Telephone__c.field-meta.xml
<CustomField>
    <fullName>Section_6920_IP_Telephone__c</fullName>
    <defaultValue>true</defaultValue>
    <label>Section: 6920 IP Telephone</label>
    <type>Checkbox</type>
</CustomField>