unpackaged/main/default/objects/Opportunity/fields/Section_Carrier_Services__c.field-meta.xml
<CustomField>
    <fullName>Section_Carrier_Services__c</fullName>
    <defaultValue>true</defaultValue>
    <label>Section: Carrier Services</label>
    <type>Checkbox</type>
</CustomField>