unpackaged/main/default/objects/Opportunity/fields/Section_E_Fax__c.field-meta.xml
<CustomField>
    <fullName>Section_E_Fax__c</fullName>
    <defaultValue>true</defaultValue>
    <label>Section: E-Fax</label>
    <type>Checkbox</type>
</CustomField>