unpackaged/main/default/objects/Opportunity/fields/Section_IPro_Media__c.field-meta.xml
<CustomField>
    <fullName>Section_IPro_Media__c</fullName>
    <defaultValue>true</defaultValue>
    <label>Section: IPro Media</label>
    <type>Checkbox</type>
</CustomField>