unpackaged/main/default/objects/Opportunity/fields/SFDC_TEST_Opportunity_Amount__c.field-meta.xml
<CustomField>
    <fullName>SFDC_TEST_Opportunity_Amount__c</fullName>
    <label>SFDC TEST Opportunity Amount</label>
    <precision>14</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>