unpackaged/main/default/objects/Opportunity/fields/Shipping_Comments__c.field-meta.xml
<CustomField>
    <fullName>Shipping_Comments__c</fullName>
    <inlineHelpText>Enter comments regarding shipping this order.</inlineHelpText>
    <label>Shipping Comments</label>
    <length>500</length>
    <type>LongTextArea</type>
</CustomField>