unpackaged/main/default/objects/Opportunity/fields/Shipping_Contact__c.field-meta.xml
<CustomField>
    <fullName>Shipping_Contact__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Shipping Contact</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Opportunities</relationshipLabel>
    <relationshipName>Opportunities</relationshipName>
    <type>Lookup</type>
</CustomField>