unpackaged/main/default/objects/Opportunity/fields/Shipping_Contact_Telephone_Number__c.field-meta.xml
<CustomField>
    <fullName>Shipping_Contact_Telephone_Number__c</fullName>
    <formula>Shipping_Contact__r.Phone</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Shipping Contact Telephone Number</label>
    <type>Text</type>
</CustomField>