unpackaged/main/default/objects/Opportunity/fields/Shipping_Method__c.field-meta.xml
<CustomField>
    <fullName>Shipping_Method__c</fullName>
    <label>Shipping Method</label>
    <type>Picklist</type>
    <valueSet>
        <controllingField>Shipping_Carrier__c</controllingField>
        <valueSetDefinition>
            <value>
                <fullName>Next Day Priority</fullName>
            </value>
            <value>
                <fullName>Next Day Standard</fullName>
            </value>
            <value>
                <fullName>2nd Day</fullName>
            </value>
            <value>
                <fullName>Regular Ground</fullName>
            </value>
            <value>
                <fullName>Via Technician</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>