unpackaged/main/default/objects/Opportunity/fields/Signer__c.field-meta.xml
<CustomField>
    <fullName>Signer__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>4-3-24 BM: The Contact who will be sent the Conga Sign document.</description>
    <inlineHelpText>This field must have a Contact with an email address to send an esign document.</inlineHelpText>
    <label>Signer</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Opportunities (Signer)</relationshipLabel>
    <relationshipName>SignerOpportunities</relationshipName>
    <type>Lookup</type>
</CustomField>