unpackaged/main/default/objects/Opportunity/fields/Signer_ID__c.field-meta.xml
<CustomField>
    <fullName>Signer_ID__c</fullName>
    <description>4/10/24 BM: Converts the 18 digit Contact ID for the related signer to the 15 digit format for Conga Composer and Conga Sign compatibility.</description>
    <formula>LEFT(Signer__c, 15)</formula>
    <label>Signer ID</label>
    <type>Text</type>
</CustomField>