unpackaged/main/default/objects/Opportunity/fields/Solution_Engineer_Engaged__c.field-meta.xml
<CustomField>
    <fullName>Solution_Engineer_Engaged__c</fullName>
    <label>Solution Engineer Engaged</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>YES</fullName>
            </value>
            <value>
                <fullName>NO</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>