unpackaged/main/default/objects/Opportunity/fields/Support_Contract_Term__c.field-meta.xml
<CustomField>
    <fullName>Support_Contract_Term__c</fullName>
    <label>Support Contract Term</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>One Year</fullName>
                <default>true</default>
                <label>One Year</label>
            </value>
            <value>
                <fullName>Two Years</fullName>
            </value>
            <value>
                <fullName>Three Years</fullName>
            </value>
            <value>
                <fullName>Four Years</fullName>
            </value>
            <value>
                <fullName>Five Years</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>