unpackaged/main/default/objects/Opportunity/fields/Support_Cost_Amount_Comm3__c.field-meta.xml
<CustomField>
    <fullName>Support_Cost_Amount_Comm3__c</fullName>
    <label>Support Cost Amount Comm3</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>