unpackaged/main/default/objects/Opportunity/fields/SWB_Equipment_Total__c.field-meta.xml
<CustomField>
    <fullName>SWB_Equipment_Total__c</fullName>
    <label>SWB Equipment Total</label>
    <precision>14</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>