unpackaged/main/default/objects/Opportunity/fields/test__c.field-meta.xml
<CustomField>
    <fullName>test__c</fullName>
    <description>Created by Rollup Helper</description>
    <label>test</label>
    <precision>14</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>