unpackaged/main/default/objects/Opportunity/fields/Ticket__c.field-meta.xml
<CustomField>
    <fullName>Ticket__c</fullName>
    <label>Ticket #</label>
    <length>55</length>
    <type>Text</type>
</CustomField>