unpackaged/main/default/objects/Opportunity/fields/TSB_Funding_Factor__c.field-meta.xml
<CustomField>
    <fullName>TSB_Funding_Factor__c</fullName>
    <formula>AnyWare_Term_2016__r.TSB_Rate__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>TSB Funding Factor</label>
    <precision>18</precision>
    <scale>6</scale>
    <type>Number</type>
</CustomField>