unpackaged/main/default/objects/Opportunity/fields/TSP_Disc_Percent__c.field-meta.xml
<CustomField>
    <fullName>TSP_Disc_Percent__c</fullName>
    <label>TSP Promotional Discount %</label>
    <precision>14</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>