unpackaged/main/default/objects/Opportunity/fields/TSP_End_Date__c.field-meta.xml
<CustomField>
    <fullName>TSP_End_Date__c</fullName>
    <formula>Case( TSP_Term__c ,
   "12 Months", TSP_Start_Date__c  + 365,
   "24 Months", TSP_Start_Date__c +(2 * 365),
   "36 Months", TSP_Start_Date__c +(3 * 365),
   "48 Months", TSP_Start_Date__c +(4 * 365), 
   "60 Months", TSP_Start_Date__c +(5 * 365),
TSP_Start_Date__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>TSP Contract End Date</label>
    <type>Date</type>
</CustomField>