unpackaged/main/default/objects/Opportunity/fields/TSP_Funding_Amount__c.field-meta.xml
<CustomField>
    <fullName>TSP_Funding_Amount__c</fullName>
    <formula>TSP_Monthly_Net_Less_Provision__c  /  TSP_Funding_Factor__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>TSP Funding Amount</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>