unpackaged/main/default/objects/Opportunity/fields/TSP_Funding_Reserve__c.field-meta.xml
<CustomField>
    <fullName>TSP_Funding_Reserve__c</fullName>
    <label>TSP Funding Reserve</label>
    <precision>14</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>