unpackaged/main/default/objects/Opportunity/fields/TSP_Funding_Source__c.field-meta.xml
<CustomField>
    <fullName>TSP_Funding_Source__c</fullName>
    <label>TSP Funding Source</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Texas Star Bank</fullName>
            </value>
            <value>
                <fullName>Great America Leasing Corp</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>