unpackaged/main/default/objects/Opportunity/fields/TSP_GA_Approval_Contract_Number__c.field-meta.xml
<CustomField>
    <fullName>TSP_GA_Approval_Contract_Number__c</fullName>
    <inlineHelpText>Enter the approval number listed on the credit approval letter from Great America prior to printing for Client signature. This number must be on the printed AnyWare contract signed by the Client.</inlineHelpText>
    <label>GA Approval/Contract Number</label>
    <length>30</length>
    <type>Text</type>
</CustomField>