unpackaged/main/default/objects/Opportunity/fields/TSP_Installation_Discount__c.field-meta.xml
<CustomField>
    <fullName>TSP_Installation_Discount__c</fullName>
    <formula>CASE( TSP_Term__c,
"36 Months",   AnyWare_Non_Miscellaneous_Installation__c  * -0.5,
"48 Months",   AnyWare_Non_Miscellaneous_Installation__c  * -1.0,
"60 Months",   AnyWare_Non_Miscellaneous_Installation__c  * -1.0,
0)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>Calculates and displays the standard installation discount based on the contract term.. The amount can then be copied to the installation field of the AnyWare Term Discount product code in the products section.</inlineHelpText>
    <label>TSP Installation Discount</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>