unpackaged/main/default/objects/Opportunity/fields/TSP_Installation_Net_Total__c.field-meta.xml
<CustomField>
    <fullName>TSP_Installation_Net_Total__c</fullName>
    <formula>TSP_Installation_Total__c  +  TSP_Installation_Discount__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>TSP Installation Net Total</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>