unpackaged/main/default/objects/Opportunity/fields/TSP_Installation_Total__c.field-meta.xml
<CustomField>
    <fullName>TSP_Installation_Total__c</fullName>
    <label>TSP Installation Total</label>
    <summarizedField>OpportunityLineItem.MS_OP_Installation_Total__c</summarizedField>
    <summaryForeignKey>OpportunityLineItem.OpportunityId</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>