unpackaged/main/default/objects/Opportunity/fields/TSP_Monthly_Access_Price__c.field-meta.xml
<CustomField>
    <fullName>TSP_Monthly_Access_Price__c</fullName>
    <defaultValue>0.00</defaultValue>
    <label>TSP Monthly Access Price</label>
    <precision>14</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>