unpackaged/main/default/objects/Opportunity/fields/TSP_Monthly_Net_Less_Provision__c.field-meta.xml
<CustomField>
    <fullName>TSP_Monthly_Net_Less_Provision__c</fullName>
    <formula>TSP_Monthly_Net_Total__c -  TSP_Provision__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>TSP Monthly Net Less Provision</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>