unpackaged/main/default/objects/Opportunity/fields/TSP_Monthly_Total_Filtered__c.field-meta.xml
<CustomField>
    <fullName>TSP_Monthly_Total_Filtered__c</fullName>
    <formula>CASE( Sale_Type__c , 
   "TSP",  TSP_Monthly_Total__c ,
    0)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>TSP Monthly Total</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>