unpackaged/main/default/objects/Opportunity/fields/TSP_Net_Funding_Less_Reserve__c.field-meta.xml
<CustomField>
    <fullName>TSP_Net_Funding_Less_Reserve__c</fullName>
    <formula>TSP_Funding_Amount__c  -  TSP_Funding_Reserve__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>TSP Net Funding Less Reserve</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>