unpackaged/main/default/objects/Opportunity/fields/TSP_Promotion_Description__c.field-meta.xml
<CustomField>
    <fullName>TSP_Promotion_Description__c</fullName>
    <label>TSP Promotion Description</label>
    <length>40</length>
    <type>Text</type>
</CustomField>