unpackaged/main/default/objects/Opportunity/fields/TSP_Promotional_Discount__c.field-meta.xml
<CustomField>
    <fullName>TSP_Promotional_Discount__c</fullName>
    <label>TSP Promotional Discount</label>
    <precision>14</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>