unpackaged/main/default/objects/Opportunity/fields/TSP_Provision__c.field-meta.xml
<CustomField>
    <fullName>TSP_Provision__c</fullName>
    <label>TSP Provision</label>
    <precision>14</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>