unpackaged/main/default/objects/Opportunity/fields/TSP_Quota_Points__c.field-meta.xml
<CustomField>
    <fullName>TSP_Quota_Points__c</fullName>
    <formula>TSP_Monthly_Net_Total__c  *  Numeric_Term__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>TSP Quota Points</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>