unpackaged/main/default/objects/Opportunity/fields/TSP_Quote_Notes__c.field-meta.xml
<CustomField>
    <fullName>TSP_Quote_Notes__c</fullName>
    <label>Quote/Contract Quote Notes</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>