unpackaged/main/default/objects/Opportunity/fields/TSP_Start_Date__c.field-meta.xml
<CustomField>
    <fullName>TSP_Start_Date__c</fullName>
    <label>TSP Contract Start Date</label>
    <type>Date</type>
</CustomField>