unpackaged/main/default/objects/Opportunity/fields/TSP_Term__c.field-meta.xml
<CustomField>
    <fullName>TSP_Term__c</fullName>
    <inlineHelpText>Enter the desired TotalSolution contract term here. Also use this field for TotalSolution support only contracts.</inlineHelpText>
    <label>TSP Term</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Monthly</fullName>
            </value>
            <value>
                <fullName>12 Months</fullName>
            </value>
            <value>
                <fullName>24 Months</fullName>
            </value>
            <value>
                <fullName>36 Months</fullName>
            </value>
            <value>
                <fullName>48 Months</fullName>
            </value>
            <value>
                <fullName>60 Months</fullName>
            </value>
            <value>
                <fullName>Custom</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>