unpackaged/main/default/objects/Opportunity/fields/Verified_Count__c.field-meta.xml
<CustomField>
    <fullName>Verified_Count__c</fullName>
    <label>Verified Count</label>
    <summarizedField>Managed_Services_Contract__c.Verified_Count__c</summarizedField>
    <summaryForeignKey>Managed_Services_Contract__c.Opportunity__c</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>