unpackaged/main/default/objects/Opportunity/fields/WF_Credit_App_Status__c.field-meta.xml
<CustomField>
    <fullName>WF_Credit_App_Status__c</fullName>
    <label>WF Credit App Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Submitted</fullName>
            </value>
            <value>
                <fullName>Approved</fullName>
            </value>
            <value>
                <fullName>Denied</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>