unpackaged/main/default/objects/Opportunity/validationRules/Evaluate_Stage_for_Approval.validationRule-meta.xml
<ValidationRule>
    <fullName>Evaluate_Stage_for_Approval</fullName>
    <active>true</active>
    <description>Evaluate stage set to Closed Won for management approval.</description>
    <errorConditionFormula>AND(
    ISPICKVAL(StageName, "Closed Won"),
    Approved__c = FALSE,
    NOT(ISPICKVAL(OPS_Category__c, "MAC"))
)</errorConditionFormula>
    <errorDisplayField>StageName</errorDisplayField>
    <errorMessage>The Opportunity must be Approved by Management before the stage can be changed to Closed Won.</errorMessage>
</ValidationRule>