unpackaged/main/default/objects/Opportunity/validationRules/Locked_Record_Do_Not_Allow_Edit.validationRule-meta.xml
<ValidationRule>
    <fullName>Locked_Record_Do_Not_Allow_Edit</fullName>
    <active>false</active>
    <errorConditionFormula>Locked__c &amp;&amp; NOT(ISCHANGED(Locked__c))</errorConditionFormula>
    <errorMessage>The Record is Locked...Contact an administrator if you feel this record should be edited. (testing mkneill 11/16/16)</errorMessage>
</ValidationRule>