unpackaged/main/default/objects/Opportunity/validationRules/Term_Validation.validationRule-meta.xml
<ValidationRule>
    <fullName>Term_Validation</fullName>
    <active>true</active>
    <errorConditionFormula>AND(ISPICKVAL( Sale_Type__c ,"AnyWare"), AnyWare_Term_2016__c ="")</errorConditionFormula>
    <errorDisplayField>AnyWare_Term_2016__c</errorDisplayField>
    <errorMessage>A term must be entered for this record. Use 60 as the default.</errorMessage>
</ValidationRule>