unpackaged/main/default/objects/Opportunity/listViews/All_Opportunitie.listView-meta.xml
<ListView>
    <fullName>All_Opportunitie</fullName>
    <columns>OPPORTUNITY.CREATED_DATE</columns>
    <columns>CORE.USERS.ALIAS</columns>
    <columns>ACCOUNT.NAME</columns>
    <columns>OPPORTUNITY.NAME</columns>
    <columns>Sale_Type__c</columns>
    <columns>OPPORTUNITY.CLOSE_DATE</columns>
    <columns>OPPORTUNITY.STAGE_NAME</columns>
    <columns>Opportunity_Booking_Amount__c</columns>
    <filterScope>Everything</filterScope>
    <label>All Opportunities</label>
    <sharedTo>
        <allInternalUsers />
    </sharedTo>
</ListView>