unpackaged/main/default/objects/Opportunity/listViews/All_Opportunitie_Comm3_ClosedWon.listView-meta.xml
<ListView>
    <fullName>All_Opportunitie_Comm3_ClosedWon</fullName>
    <columns>Opportunity_Alpha_Tag__c</columns>
    <columns>Account_Alias__c</columns>
    <columns>OPPORTUNITY.NAME</columns>
    <columns>ACCOUNT.NAME</columns>
    <columns>OPPORTUNITY.STAGE_NAME</columns>
    <columns>OPPORTUNITY.CLOSE_DATE</columns>
    <columns>Opportunity_Booking_Amount__c</columns>
    <columns>Install_Date_Completed__c</columns>
    <columns>RB_SFDC__c</columns>
    <columns>Bill_Number__c</columns>
    <columns>Bill_Date__c</columns>
    <columns>OPPORTUNITY.LAST_UPDATE</columns>
    <columns>OPPORTUNITY.TYPE</columns>
    <columns>Sale_Type__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Account_Source_ACQ__c</field>
        <operation>equals</operation>
        <value>Comm3</value>
    </filters>
    <filters>
        <field>OPPORTUNITY.STAGE_NAME</field>
        <operation>equals</operation>
        <value>Closed Won</value>
    </filters>
    <label>All Opportunities Comm3 Closed Won</label>
    <language>en_US</language>
    <sharedTo>
        <group>Group_Comm3</group>
    </sharedTo>
</ListView>